@@ -5655,7 +5655,8 @@ The default base for 64-bit PE binaries is 0x140000000.
 <TR BGCOLOR="#F0F0F0">
 <TD><b>x279</b></TD>
 <TD>64-bit label referenced with 32-bit fixup</TD>
-<TD>
+<TD>This is a warning (level 3), indicating that the binary most likely will have to be linked with option /LARGEADDRESSAWARE:NO
+and an image base that fits into 32-bit.
 </TD>
 </TR>
 
